# gdx

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  CMakeLists.txt  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  base-units.cmake  batchalloc_8h_source.html  changelog.yaml  classes.html  classgdx_1_1TAcronymList-members.html  classgdx_1_1TAcronymList.html  classgdx_1_1TFilterList-members.html  classgdx_1_1TFilterList.html  classgdx_1_1TGXFileObj-members.html  classgdx_1_1TGXFileObj.html  classgdx_1_1TGXFileObj.js  classgdx_1_1TIntegerMapping-members.html  classgdx_1_1TIntegerMapping.html  classgdx_1_1TUELTable-members.html  classgdx_1_1TUELTable.html  classgdx_1_1TgdxUELIndex-members.html  classgdx_1_1TgdxUELIndex.html  classgdx_1_1TgdxValues-members.html  classgdx_1_1TgdxValues.html  classgdx_1_1TgxModeSet-members.html  classgdx_1_1TgxModeSet.html  classgdx_1_1batchalloc_1_1BatchAllocator-members.html  classgdx_1_1batchalloc_1_1BatchAllocator.html  classgdx_1_1collections_1_1datastorage_1_1TLinkedData-members.html  classgdx_1_1collections_1_1datastorage_1_1TLinkedData.html  classgdx_1_1collections_1_1gmsdata_1_1TTblGamsData-members.html  classgdx_1_1collections_1_1gmsdata_1_1TTblGamsData.html  classgdx_1_1collections_1_1gmsobj_1_1TBooleanBitArray-members.html  (+112 more)
src/tools/: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  README.md  pyproject.toml
src/tools/common/: cmdpar.h
src/tools/common/scripts/: hyperfine.sh  leaks.sh
src/tools/gdx2veda/: container.cpp  container.h  gdx2veda.cpp  gdx2veda.h  gdx2veda.hpp  vdd.cpp  vdd.h  vdd.hpp
src/tools/gdxdiff/: CMakeLists.txt  gdxdiff.cpp  gdxdiff.h  gdxdiff.hpp  main.cpp
src/tools/gdxdump/: CMakeLists.txt  gdxdump.cpp  gdxdump.h  gdxdump.hpp  main.cpp
src/tools/gdxdump/tests/: globals.py  pip_install.sh  requirements.txt
src/tools/gdxdump/tests/templates/: common.py  label_example.py  small_example.py  sv_example.py
src/tools/gdxmerge/: CMakeLists.txt  gams_symbol.cpp  gams_symbol.h  gdxmerge.cpp  gdxmerge.h  gdxmerge.hpp  main.cpp  symbol_list.cpp  symbol_list.h
src/tools/scripts/: build.sh  configure.sh  directories.sh  fix_errors.sh  tests.sh  venv.sh
src/tools/tests/: .gitignore  __main__.py  benchmark.py  common.py  conda_install.sh  environment.yml  files.py  gdxdiff.py  gdxdump.py  gdxmerge.py  globals.py  main.py  pip_install.sh  pip_requirements.txt  requirements.txt  tests.py
src/tools/tests/benchmarks/: common.py  examples.py  files.py
src/tools/tests/environment/: install.sh  requirements.in  requirements.txt
src/tools/tests/environments/conda/: environment.yml  install.sh
src/tools/tests/examples/: .gitignore  changed_full_example.py  changed_small_example.py  default_values_example.py  default_values_examples.py  description_examples.py  domain_examples.py  element_text_example.py  full_example.py  full_example_changed_data_and_variables.py  full_example_changed_variables.py  label_example.py  order_examples.py  small_example.py  small_example_changed_data.py  special_values_example.py
src/tools/tests/output/gdxdiff/: default_values_example_1_and_default_values_example_2.txt  default_values_example_1_and_default_values_example_2_compare_default_values.txt  description_example_1_and_description_example_2_compare_associated_texts_n.txt  description_example_1_and_description_example_2_compare_associated_texts_y.txt  domain_example_1_and_domain_example_2.txt  domain_example_1_and_domain_example_2_compare_symbol_domains.txt  full_and_changed_full_example.txt  full_example_and_full_example_changed_data_and_variables.txt  full_example_and_full_example_changed_data_and_variables_id_c_d.txt  full_example_and_full_example_changed_data_and_variables_id_x.txt  full_example_and_full_example_changed_data_and_variables_skip_id_c_d.txt  full_example_and_full_example_changed_data_and_variables_skip_id_x.txt  full_example_and_full_example_changed_variables_field_m.txt  order_example_1_and_order_example_2.txt  small_and_changed_small_example.txt  small_and_changed_small_example_epsilon.txt  small_example_and_full_example.txt  usage.txt
src/tools/tests/output/gdxdump/: element_text_example_set_text.txt  element_text_example_symbol_format_csv_set_text.txt  full_example_decimal_separator_comma.txt  full_example_delimiter_blank.txt  full_example_delimiter_comma.txt  full_example_delimiter_missing.txt  full_example_delimiter_semicolon.txt  full_example_delimiter_tab.txt  full_example_domain_information.txt  full_example_filter_default_values.txt  full_example_format_csv.txt  full_example_format_gamsbas.txt  full_example_format_normal.txt  full_example_no_data.txt  full_example_numerical_format_hexbytes.txt  full_example_numerical_format_hexponential.txt  full_example_symbol.txt  full_example_symbol_format_csv.txt  full_example_symbol_format_csv_all_fields.txt  full_example_symbol_format_csv_cdim.txt  full_example_symbol_format_csv_header.txt  full_example_symbol_format_csv_no_header.txt  full_example_symbol_missing_identifier.txt  full_example_symbol_not_found.txt  full_example_symbols.txt  full_example_symbols_as_set.txt  full_example_symbols_as_set_domain_information.txt  full_example_uel_table.txt  full_example_uel_table_missing_identifier.txt  full_example_version.txt  label_example.txt  small_example.txt  special_values_example_filter_default_values_out_epsilon.txt  special_values_example_filter_default_values_out_negative_infinity.txt  special_values_example_filter_default_values_out_not_available.txt  special_values_example_filter_default_values_out_positive_infinity.txt  special_values_example_filter_default_values_out_undefined.txt  special_values_example_filter_default_values_out_zero.txt  usage.txt
src/tools/tests/output/gdxmerge/: small_example_and_full_example.txt  small_example_and_full_example_big_symbols.txt  small_example_and_full_example_exclude_i.txt  small_example_and_full_example_exclude_i_j.txt  usage.txt  (+3 more)
src/tools/tests/scripts/: diff.sh
src/tools/tests/templates/: common.py  full_example.py  scalar.py
(+339 files in other folders)
