[project]
name = "gdx-tools"
version = "0.0.1"
description = "Command-line utilities for GDX files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gamsapi[transfer]>=52.3.0",
]

[dependency-groups]
dev = [
    # "detect-secrets>=1.5.0",
    "pre-commit>=4.5.1",
    # { include-group = "lint-cpp" },
    { include-group = "lint-python" },
]
lint-cpp = [
    "clang-format>=21.1.8",
    "clang-tidy>=21.1.6",
    "cppcheck>=1.5.1",
]
lint-python = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.3.3.260113",
    "ruff>=0.14.13",
    "ty>=0.0.9",
]

[tool.ruff.lint]
extend-select = ["I"]
